--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             }
         }
         greeting(10);
+
+
+        let drawCats = function (drawing){
+            for(i=0; i<drawing; i++){
+                console.log(i + "^.^");
+            }
+        }
+        drawCats(10);
     </script>
 </body>
 </html>
