data types and Variables

--- a/index.html
+++ b/index.html
@@ -21,6 +21,33 @@
             }
         }
         drawCats(10);
+
+        // Data Types and Variables
+        let a = 99;
+        let b = 123;
+        console.log(a*b);
+
+        // Slice a string
+        let sliceString = "This is a long string";
+        let slice = function(){
+            console.log(sliceString.slice(0,4))
+        }
+        slice();
+
+        // Boolean:
+        let raju = 1;
+        let rani = 1;
+        let genderSex = function(){
+            if (raju == 0){
+                console.log("Raju's gender is Male")
+            }
+            else{
+                console.log("Raju's gender is not male");
+            }
+        }
+        genderSex();
+
+        
     </script>
 </body>
 </html>
